<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">EngineerMode</string>
    <string name="starttest">start test</string>
    <string name="next">next</string>
    <string name="report">report</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="pleasewait">Please wait...</string>
    <string name="skip">skip</string>
    <string name="shutdowning">shutdowning</string>
    <string name="selectAll">select All</string>
    <string name="selectNone">select None</string>
    <string name="item_duration_second">test duration (s):\t</string>
    <string name="test_over">Test completed</string>
    <string name="test_result">test result:</string>
    <string name="all_test_ok">All test results passed</string>
    <string name="test_not_pass">Some tests did not pass</string>
    <string name="test_suc">Test succeeded</string>
    <string name="test_failed">test failed</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="test_virbate">test vibration</string>
    <string name="passunpass">Whether the test succeeded or not</string>
    <string name="retest">retest</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="fastcharger_pass">Fast charger Pass</string>
    <string name="clear_marks">clear mark</string>
    <string name="video_play_title">video play</string>
    <string name="video_play_failed">Failed to play the vedio</string>
    <string name="video_play_fail_file_may_not_exist">file may not exist</string>
    <string name="video_play_file_not_exist">Video file <xliff:g id="NETWORK_NAME">%1$s</xliff:g> doesn\'t exist</string>
    <string name="cpu_basic_frequency_title">set CPU basic frequency</string>
    <string name="cpu_basic_frequency_unlock_frequency_failed">CPU failed to unlock frequency</string>
    <string name="cpu_basic_frequency_lock_frequency_failed">CPU failed to unlock frequency</string>
    <string name="cpu_basic_frequency_set_failed">CPU basic frequency settings failed</string>
    <string name="gprs_act_title">GPRS Act</string>
    <string name="gprs_act_attatch">Attatch</string>
    <string name="gprs_act_detatch">Detatch</string>
    <string name="gprs_act_1st_pdp">1st PDP</string>
    <string name="gprs_act_2nd_pdp">2nd PDP</string>
    <string name="gprs_act_send_data">Send data</string>
    <string name="gprs_act_uplink_data_length">Input data length</string>
    <string name="gprs_act_uplink_data_length_invalidate">Input data length is too long</string>
    <string name="gprs_act_uplink_data_length_default">1024</string>
    <string name="protocol_test_switcher">Protocol test switch</string>
    <string name="cfu_test">CFU</string>
    <string name="cfu_textView">CFU Setting:</string>
    <string name="cfu_turn_on">Always query</string>
    <string name="cfu_turn_off">Always not query</string>
    <string name="cfu_ok">Set</string>
    <string name="cfu_default">Set_Default</string>
    <string name="device_manager">Device Manager</string>
    <string name="device_mgr_sms_auto_reg">"SMS AutoRegister"</string>
    <string name="mtu_test">MTU</string>
    <string name="set_mtu">修改MTU</string>
    <string name="inlegal_mtu">MTU值无效</string>
    <string name="set_mtu_done">修改成功</string>
    <string name="GPRS">GPRS</string>
    <string name="GPRS_Attached">Attached</string>
    <string name="GPRS_Detached">Detached</string>
    <string name="GPRS_1st_PDP">1st PDP</string>
    <string name="GPRS_2nd_PDP">2nd PDP</string>
    <string name="GPRS_As_Primary">As Primary</string>
    <string name="GPRS_As_Secondary">As Secondary</string>
    <string name="GPRS_Activate_PDP">Activate PDP</string>
    <string name="GPRS_Deactivate_PDP">Deactivate PDP</string>
    <string name="GPRS_1000">1000</string>
    <string name="GPRS_Send_Data">Send Data</string>
    <string name="gps_title">GPS</string>
    <string name="gps_summary">test GPS，collect Nmea info，show GPS info</string>
    <string name="gps_msg">searching，info will be displayed by list view，TTFF time will be displayed in Title...</string>
    <string name="gps_cold_start">Cold start</string>
    <string name="gps_warm_start">Warm start</string>
    <string name="gps_hot_start">Hot start</string>
    <string name="gps_start_failed">Start failed, retry later</string>
    <string name="gps_provider_not_enable">enable GPS in settings first</string>
    <string name="gps_accuracy_is">accuracy:</string>
    <string name="gps_latitude_is">latitude:</string>
    <string name="gps_longitude_is">longitude:</string>
    <string name="gps_speed_is">speed:</string>
    <string name="gps_ttff_is">TTFF:</string>
    <string name="gps_time_is">time:</string>
    <string name="gps_satellites_empty">searching satellites...</string>
    <string name="gps_start_test">Start GPS Test</string>
    <string name="gps_status_test">GPS status test</string>
    <string name="gps_toogle">start</string>
    <string name="echotest_title">echo test</string>
	<string name="echotest_summary">Please run echo test (start main mic test by default):</string>
    <string name="echotest_doing">do echo test</string>
    <string name="echotest_open">primary MIC test</string>
    <string name="echotest_close">secondary MIC test</string>
    <string name="anc_test">ANC MIC test</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="second">second</string>
    <string name="imei_pcb_check">check and encrypt IMEI</string>
    <string name="imei_num">IMEI</string>
	<string name="imei2_num">SIM2 IMEI</string>
	<string name="meid_num">MEID</string>
    <string name="encrypt_imei_num">encrypt IMEI</string>
    <string name="pcb_num">PCB num</string>
    <string name="lang_pack">LANG_PACK: </string>
    <string name="cust_pack">CUST_PACK: </string>
    <string name="WiFi">Wi-Fi</string>
    <string name="WiFi_Tx">Wi-Fi_Tx</string>
    <string name="WiFi_Rx">Wi-Fi_Rx</string>
    <string name="WiFi_EEPROM">Wi-Fi_EEPROM</string>
    <string name="WiFi_Temperature_Sensor">Wi-Fi_Temperature_Sensor</string>
    <string name="WiFi_MCR">Wi-Fi_MCR</string>
    <string name="WiFi_Channel_Text">Channel:</string>
    <string name="WiFi_Pkt_Text">Pkt length:</string>
    <string name="WiFi_Pkt_Edit">1024</string>
    <string name="WiFi_Pktcnt_Text">Pkt cnt:</string>
    <string name="WiFi_Pktcnt_Edit">3000</string>
    <string name="WiFi_Tx_Text">Tx gain:</string>
    <string name="WiFi_Tx_Edit">22</string>
    <string name="WiFi_Rate_Text">Rate:</string>
    <string name="WiFi_Mode_Text">Mode:</string>
    <string name="WiFi_XtalTrim_Text">Xtal Trim:</string>
    <string name="WiFi_XtalTrim_Edit"></string>
    <string name="WiFi_XtalTrim_Read">Read</string>
    <string name="WiFi_XtalTrim_Write">Write</string>
    <string name="WiFi_ALC">ALC Function for Normal Packet Tx/Rx</string>
    <string name="WiFi_Go">Go</string>
    <string name="WiFi_Stop">Stop</string>
    <string name="WiFi_FCS_Text">FCS:</string>
    <string name="WiFi_FCS_Content">30</string>
    <string name="WiFi_Rx_Text">Rx:</string>
    <string name="WiFi_Rx_Content">0</string>
    <string name="WiFi_PER_Text">PER:</string>
    <string name="WiFi_PER_Content">100</string>
    <string name="WiFi_WordAccess_Text">WORD Access:</string>
    <string name="WiFi_addr_Text">addr(h,byte):</string>
    <string name="WiFi_addr_Content"></string>
    <string name="WiFi_value_Text">value(h):</string>
    <string name="WiFi_value_Content"></string>
    <string name="WiFi_Read_Word">Read</string>
    <string name="WiFi_Write_Word">Write</string>
    <string name="WiFi_StringAccess_Text">Byte String Access:</string>
    <string name="WiFi_addr_Text_String">addr(h,byte):</string>
    <string name="WiFi_addr_Content_String"></string>
    <string name="WiFi_length_Text_String">length(byte):</string>
    <string name="WiFi_length_Content_String"></string>
    <string name="WiFi_value_Text_String">value(h):</string>
    <string name="WiFi_value_Content_String"></string>
    <string name="WiFi_SaveBtn">EEPROM Save As File</string>
    <string name="WiFi_BurnBtn">Burn From File</string>
    <string name="WiFi_ReadAllBtn">Read All</string>
    <string name="WiFi_ClearBtn">Clear</string>
    <string name="WiFi_Misc_Text">Temperature sensor measurement:</string>
    <string name="WiFi_Misc_GoBtn">Go</string>
    <string name="WiFi_Misc_StopBtn">Stop</string>
    <string name="WiFi_Misc_ClearBtn">Clear</string>
    <string name="WiFi_MCR_Text">MCR:</string>
    <string name="WiFi_MCR_Addr_Text">Addr(h):</string>
    <string name="WiFi_MCR_Value_Text">Value(h):</string>
    <string name="WiFi_MCR_ReadBtn">Read</string>
    <string name="WiFi_MCR_WriteBtn">Write</string>
    <string name="WiFi_EEPROM_SAVE_DIALOG_TITLE">Save as</string>
    <string name="WiFi_EEPROM_SAVE_DIR">Please input a file name</string>
    <string name="WiFi_EEPROM_SAVE_DIR_DONE">OK</string>
    <string name="File_List_Title">Please select a file to burn</string>
    <string name="wifi_test_title">Wi-Fi test</string>
        <string name="wifi_sensitivity_switch_title">WIFI sensitivity</string>
    <string name="wifi_sensitivity_switch_summary">CMCC WIFI sensitivity switch</string>
    <string name="wifi_test_summary">"scan Wi-Fi network, select OPPO MT8860C to auto connect"</string>
    <string name="wifi_test_summary2">Searching for Wi-Fi network, show signal strength etc.</string>
    <string name="open_wifi">Open Wi-Fi</string>
    <string name="open_wifi_failed">Failed to open Wi-Fi</string>
    <string name="close_wifi">Close Wi-Fi</string>
    <string name="close_wifi_failed">Failed to close Wi-Fi</string>
    <string name="error_starting">Unable to open Wi-Fi</string>
    <string name="error_stopping">Unable to stop Wi-Fi</string>
    <string name="error_scanning">"Failed to scan to find network"</string>
    <string name="error_connecting">"Failed to connect to network"</string>
    <string name="error_saving">"Failed to save network"</string>
    <string name="fragment_status_scanning">"scanning..."</string>
    <string name="fragment_status_connecting">Connecting to <xliff:g id="NETWORK_NAME">%1$s</xliff:g>...</string>
    <string name="fragment_status_authenticating">Authenticating through <xliff:g id="NETWORK_NAME">%1$s</xliff:g>...</string>
    <string name="fragment_status_obtaining_ip">Obtaining IP address from <xliff:g id="NETWORK_NAME">%1$s</xliff:g>...</string>
    <string name="fragment_status_connected">Connected to <xliff:g id="NETWORK_NAME">%1$s</xliff:g></string>
    <string name="fragment_status_disconnecting">Disconnecting from <xliff:g id="NETWORK_NAME">%1$s</xliff:g>...</string>
    <string name="fragment_status_disconnected">"disconnected"</string>
    <string name="fragment_status_failed">"failed"</string>
    <string name="status_scanning">"scanning..."</string>
    <string name="status_connecting">"connecting..."</string>
    <string name="status_authenticating">"authenticating..."</string>
    <string name="status_obtaining_ip">"obtaining ip..."</string>
    <string name="status_connected">"connected"</string>
    <string name="diagSwitch">Engineer Mode Toggle</string>
    <string name="allDiagSwitch">Full-port switch</string>
    <string name="rndisAndDiagSwitch">Rndis,diag switch</string>
    <string name="rmnetBamSwitch">rmnet_bam switch</string>
    <string name="odbSwitch">odb switch</string>
    <string name="serial">Serial</string>
    <string name="privilege">Privilege</string>
    <string name="password_enter">Sure</string>
    <string name="password_cancel">Cancel</string>
    <string name="privilege_warning">Warning: Privilege change may lead to system damaged, sensitive personal data leak and out of guarantee!</string>
</resources>