<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/text_warning"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/image_warning"
        android:textColor="#ffffff00"
        android:text="@string/privilege_warning" />

    <ImageView
        android:id="@id/image_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_alignBaseline="@id/text_warning"
        android:layout_marginLeft="7dp"
        android:src="@android:drawable/ic_dialog_alert" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/text_warning"
        android:layout_marginTop="10dp"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/password_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/password"
        android:layout_marginTop="10dp"
        android:textColor="#ffff0000"
        android:text="@string/password_enter" />

    <Button
        android:id="@+id/password_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/password_enter"
        android:layout_alignBottom="@id/password_enter"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/black"
        android:text="@string/password_cancel" />
    
</RelativeLayout>
