<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
         >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="17dp"
                android:text="@string/diagSwitch" />

            <ToggleButton
                android:id="@+id/toggle_diag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="@string/serial" />

            <ToggleButton
                android:id="@+id/toggle_serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="@string/allDiagSwitch" />

            <ToggleButton
                android:id="@+id/toggle_alldiag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
  		
  		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="@string/rndisAndDiagSwitch" />

            <ToggleButton
                android:id="@+id/rndisAndDiag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

  		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="@string/rmnetBamSwitch" />

            <ToggleButton
                android:id="@+id/rmnet_bam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

<!-- SheTao@Swdp.Android.Engineer Mode, 2015/03/23, Add for [support odb], { -->
  		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dip"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="@string/odbSwitch" />

            <ToggleButton
                android:id="@+id/toggle_odb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
<!-- //} add end for [support odb]. -->

        <TextView
			android:id="@+id/privilege_text"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:text="@string/privilege"
            android:textSize="34px"
            android:textColor="#ffff0000" />

        <Button
            android:id="@+id/privilege"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:gravity="center"
            android:textSize="34px"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>
